--- a/css/servicesandrates.css
+++ b/css/servicesandrates.css
@@ -33,8 +33,41 @@
     font-family: 'Signika', sans-serif;
     font-size: 16px;
     text-align: center;
-    margin-top: 60px;
     color: var(--mainPurple);
+    padding-top: 60px;
+}
+
+.basicServiceCard {
+    position: relative;
+    color: var(--mainGray);
+    margin-top: 60px;
+    width: 75%;
+    left: 12.5%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.39);
+}
+
+.basicServiceCard h3 {
+    color: var(--darkGray);
+}
+
+.basicServiceCard hr {
+    border: 0.5px solid var(--lightGray);
+    width: 70%;
+    align-content: center;
+    position: relative;
+    margin-top: 16px;
+}
+
+.basicServiceCard p {
+    margin-bottom: 0;
+}
+
+.basicServiceCard p:first-of-type {
+    margin-top: 40px;
+}
+
+.firstServiceCard {
+    margin-top: 120px;
 }
 
 .dropdownArrow {
@@ -47,10 +80,9 @@
     padding-bottom:0;
 }
 
-.dropdownContent {
-    height: 400px;
+.dropdownContent {  
     display: none; 
-    background-color: var(--mainGray);
+    background-color: white;
 }
 
 .show {
@@ -58,7 +90,7 @@
 }
 
 .moveDropdown {
-    margin-top:397px;
+    margin-top:1000px;
 }
 
 button {
