--- a/css/style.css
+++ b/css/style.css
@@ -459,17 +459,21 @@ i {
 }
 
 .gallery-bg {
-	width:100%;
+	width:80%;
+	margin: 0 auto;
 	background-image:url('gallery-parallax.jpg');
-	height: 1400px;
-	display:inline-block;
+	background-repeat: repeat;
+	height: 1200px;
 }
 
 .gallery-title {
-	color:white;
+	color:var(--mainBlue);
 	padding-bottom:96px;
 	padding-top:2.5%;
-	margin-bottom:0px;}
+	margin-bottom:0px;
+	position: relative;
+	top: -115px;
+}
 
 .learn-more-button {
 	font-size:1rem;
@@ -494,7 +498,7 @@ i {
 	width:100%;
 	align-content: center;
 	position: relative;
-	padding-top: 200px;
+	margin-top: 200px;
 	bottom: 150px;
 
 }
@@ -546,7 +550,7 @@ footer.page-footer .footer-copyright {
 #more-photos {
 	text-decoration: none;
 	position: absolute;
-	transform:translate(-50%, 2300%);
+	transform:translate(-50%, 1900%);
 	left: 50%;
 	font-size: 2rem;
 	color: white;
@@ -602,6 +606,8 @@ footer i {
 .gallery-img {
 	max-width: 100%;
 	width: 90%;
+	border-radius: 20px;
+	box-shadow: 10px 10px 5px #333;
 }
 
 .gallery-top-right, .gallery-top-left {
@@ -894,8 +900,7 @@ footer i {
 
 .bttn-services {
 	position:relative !important;
-	left:50% !important;
-	transform:translate(-50%, 0%) !important;
+	left:38% !important;
 	margin-left: 0px !important;
 	margin-top:5% !important;
 	font-size: 24px !important;
@@ -1135,10 +1140,6 @@ footer i {
 	.gallery-img {
 		width: 90%;
 		left: 49%;
-	}
-
-	.gallery-bg {
-		height: 1180px;
 	}
 
 	.contact-title {
