--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -2,6 +2,12 @@
     font-size: 16px;
 }
 
+.aboutUsGalleryImg {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
 @media screen and (min-width: 850px) {
     .intro-title {
         font-size: 62px;
