--- a/css/servicesandrates.css
+++ b/css/servicesandrates.css
@@ -19,6 +19,9 @@
     text-align: center;
     clear: both;
     display: block;
+    width: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .dropdownTitle {
