--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ hr {
 	font-family: 'Signika', sans-serif;
 	font-weight: 400;
 	font-size: 48px;
-	color: white;
+	color: var(--mainBlue);
 	text-transform: uppercase;
 	text-align:center;
 	margin-bottom: 0;
