--- a/css/style.css
+++ b/css/style.css
@@ -224,9 +224,9 @@ hr {
 }
 
 .card-title {
-	font-family: 'Signika', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 400;
-	font-size: 48px;
+	font-size: 44px;
 	color: var(--mainBlue);
 	text-transform: uppercase;
 	text-align:center;
@@ -246,12 +246,13 @@ a.bttn-float:hover {
 }
 
 body {
-	background-image: url('circles-light.png');
+	background-image: url('img/circles-light.png');
+	color: #404040;
 }
 
 
 .scrolled-image {
-	background-image:url('parallax-img.jpg');
+	background-image:url('img/parallax-img.jpg');
 
 	height: 600px;
 
@@ -269,7 +270,7 @@ body {
 }
 
 .intro-parallax-img {
-	background-image:url('parallax-img.jpg');
+	background-image:url('img/parallax-img.jpg');
 
 	height: 500px;
 	width: 100%;
@@ -479,7 +480,7 @@ i {
 .gallery-bg {
 	width:80%;
 	margin: 0 auto;
-	background-image:url('gallery-parallax.jpg');
+	background-image:url('img/gallery-parallax.jpg');
 	background-repeat: repeat;
 	height: 1200px;
 }
@@ -801,6 +802,37 @@ footer i {
   border-color: #bd2df5;
   background: rgba(189,45,245,0.4);
   color: #bd2df5;
+}
+
+.call-to-action__container {
+    height: 550px;
+    margin-top: 60px;
+    background-image: linear-gradient(90deg, var(--mainBlue), var(--mainPurple));
+}
+
+.call-to-action__container .call-to-action__h3 {
+    padding-top: 250px;
+}
+
+.call-to-action__container .call-to-action__h3 h3{
+    color: white;
+}
+
+.call-to-action__container .call-to-action__a {
+    margin-top: 40px;
+}
+
+.call-to-action__container .call-to-action__a a{
+    background-color: white;
+    color: var(--mainPurple);
+    background-image: none;
+    margin-left: 0;
+    margin-top: 0;
+    font-size: 24px;
+}
+
+.call-to-action__a a.bttn-float.bttn-lg:hover {
+    box-shadow: 0 30px 30px rgba(0,0,0,0.5);
 }
 
 #about-us {
