--- a/css/servicesandrates.css
+++ b/css/servicesandrates.css
@@ -1,153 +1,78 @@
-#dogWalkingDropdown {
-    background-image: url(../img/dogWalking.jpg);
-    
+#servicesAndRatesImg {
+    background-image:url('img/hero-dog-running.jpg');
 }
 
-#petSittingDropdown {
-    background-image: url(../img/petSitting.jpg);
-    
+.intro-text__quote-p{
+    font-size: 26px;
+    color: #808080;
+    width: 57%;
+    padding-left: 80px;
+    margin-top: 60px;
+    border-left: 2px solid var(--mainBlue);
 }
 
-#otherCrittersDropdown {
-    background-image: url(../img/otherCritters.jpg);
-    
+.intro-text__quote-p .accent {
+    color: #303030;
+    font-size: 20px;
+    font-family: 'Lato', sans-serif;
 }
 
-.dropdown {
-    height: 100px;
-    background-size: cover;
+.intro-text__subtitle {
+    margin-top: 100px;
+}
+
+.intro-text__subtitle-p {
+    font-size: 24px;
+    font-weight: 300;
+    width: 70%;
+    margin-left: 12%;
     text-align: center;
-    clear: both;
-    display: block;
-    width: 50%;
-    left: 50%;
-    transform: translate(-50%, 0);
 }
 
-.dropdownTitle {
-    position: relative;
-    top: 50%;
-    transform: translate(0, -50%);
-    color: white;
-    font-family: 'Signika', sans-serif;
+.services__container {
+    margin-top: 120px;
 }
 
-.dropdownText {
+.services-card__text-title {
+    color: #202020;
     font-family: 'Signika', sans-serif;
-    font-size: 16px;
     text-align: center;
-    color: var(--mainBlue);
-    padding-top: 60px;
+    text-decoration: underline;
 }
 
-.basicServiceCard {
-    position: relative;
-    color: var(--mainBlue);
-    margin-top: 70px;
-    width: 75%;
-    left: 12.5%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.39);
+.services-card__text-lead-p {
+    margin-top: 30px;
 }
 
-.basicServiceCard h3 {
+.services-card__text p {
+    text-align: center;
+}
+
+.services-card__rate {
+    margin-left: 20%;
+    margin-bottom: 0;
+    padding: 10px 0;
+    width: 60%;
+    border-top: 2px solid #808080;
+    border-left: 2px solid #808080;
+    border-right: 2px solid #808080;
+}
+
+.services-card__rate-last {
+    border-bottom: 2px solid #808080;
+}
+
+.services-card__rate-last .accent {
+    margin-left: 20px;
+}
+
+.services-card__rate .accent {
     color: var(--mainPurple);
-    padding-top: 30px;
+    font-family: "Signika", sans-serif;
+    font-weight: bolder;
+    font-size: 24px;
 }
 
-.basicServiceCard hr {
-    border: 0.5px solid var(--lightGray);
-    width: 80%;
-    align-content: center;
-    position: relative; 
-    margin-top: 16px;
-}
-
-.basicServiceCard p {
-    margin-bottom: 10px;
-}
-
-.basicServiceCard p:first-of-type {
-    margin-top: 40px;
-}
-
-.basicServiceCard p:last-of-type {
-    padding-bottom: 40px;
-}
-
-.dropdownArrow {
-    position: relative;
-    top: 25%;
-    color: white;
-}
-
-.dropdownButton {
-    padding-bottom:0;
-}
-
-.dropdownContent {  
-    display: none; 
-    background-color: white;
-}
-
-#dropdownContentDogWalking, #dropdownContentPetSitting {
-    padding-bottom: 135px;
-}
-
-#dropdownContentOtherCritters {
-    padding-bottom: 60px;
-}
-
-.show {
-    display: block;
-}
-
-.moveDropdown {
-    margin-top:635px;
-}
-
-#contactSection {
-    width: 100%;
-    align-content: center;
-    position: relative; 
-    bottom: 150px;
-}
-
-.moveContact {
-    margin-top: 800px;
-}
-
-button {
-    display: inline-block;
-    border: none;
-    padding: 1rem 2rem;
-    margin: 0;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: 1rem;
-    cursor: pointer;
-    text-align: center;
-    transition: background 250ms ease-in-out, 
-                transform 150ms ease;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-color: rgba(255,255,255,0);
-}
-
-button:hover,
-button:focus {
-    background: rgba(255,255,255,0);
-}
-
-button:focus {
-    outline: 1px solid rgba(255,255,255,0);
-    outline-offset: -4px;
-}
-
-button:active {
-    transform: scale(0.99);
-}
-
-#dropDownSection {
-    margin-top: 50px;
-    margin-bottom: 220px;
+.three-level-rate {
+    border-bottom: 2px solid #808080;
 }
