--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,37 +1,180 @@
-#myStory .row p {
-    font-size: 16px;
+#aboutUsImg {
+    background-image:url('img/hero-cat.jpg');
 }
 
-.aboutUsGalleryImg {
+.aboutUs-mission-statement-container {
+    margin-top: 100px;
+}
+
+.aboutUs-mission-statement__header {
+    font-size: 30px;
+    text-align: center;
+    color: var(--mainBlue);
+    font-family: "Signika", sans-serif;
+}
+
+.aboutUs-mission-statement__text {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.card {
+    width: 50%;
     position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
 }
 
-@media screen and (min-width: 850px) {
-    .intro-title {
-        font-size: 62px;
-    }
+.card .card-text {
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 40px;
+    text-align: center;
+}
 
-    p {
-        max-width: 850px;
-    }
+.card-title {
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size: 44px;
+	color: var(--mainBlue);
+	text-transform: uppercase;
+	text-align:center;
+	margin-bottom: 0;
+	padding: 20px 0;
+}
 
-    .mission-statement {
-        padding-bottom: 30px;
-    }
+.aboutUs-social__map-title {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 30px;
+}
 
-    #myStory {
-        max-width: 850px;
-    }
+.aboutUs-social__description {
+    text-align: center;
+    width: 60%;
+    margin-left: 20%;
+    color: var(--mainPurple);
+    font-size: 14px;
+    margin-bottom: 40px;
+}
 
-    #myStory .row p, #missionStatement .row p {
-        font-size: 20px;
-    }
+.aboutUs-social__quote-p {
+    font-size: 22px;
+    color: #808080;
+    width: 57%;
+    padding-left: 80px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    border-left: 2px solid var(--mainBlue);
+}
 
-    #location .card-title {
-        margin-bottom: 20px;
-    }
+.aboutUs-social__fbook-description {
+    text-align: center;
+    font-weight: bolder;
+    color: black;
+    font-size: 28px;
+}
 
-    
+.card-main-text {
+	padding-top: 4%;
+	padding-left:10%;
+	padding-right: 10%;
+	color:var(--mainGray);
+	font-family:'Lato',
+	sans-serif;
+	font-size: 1.15vw;
+}
+
+#testimonials {
+	margin-top: 5%;
+	display: block;
+}
+
+#testimonials-mobile {
+	display: none;
+}
+
+.card-up {
+	border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+	box-sizing:border-box;
+	height: 180px;
+}
+
+.info-color {
+	background-color: var(--mainPurple);
+}
+
+.indigo {
+	background-color: var(--mainBlue);
+}
+
+.blue-gradient {
+	background: linear-gradient(40deg,var(--mainPurple),var(--mainBlue));
+}
+
+.avatar {
+	border-radius: 50%;
+	width: 180px;
+	margin-top: -90px;
+	overflow:hidden;
+	border: 5px solid #fff;
+}
+
+.white {
+	background-color: #fff !important;
+}
+
+.rounded-circle {
+	border-radius: 50% !important;
+}
+
+.testimonial-hr {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	border: 0;
+	border-top: 1px solid rgba(0,0,0,.1);
+	box-sizing:content-box;
+	height: 0;
+	overflow: visible;
+	position:relative;
+}
+
+.carousel-multi-item {
+    margin-bottom: 5rem;
+    width: 80%;
+    left: 10%;
+}
+
+.carousel-multi-item .col-lg-4 {
+float: left;
+width: 33.3333333%;
+max-width: 100%;
+}
+
+.carousel-indicators li {
+background-color: var(--mainPurple);
+}
+
+.carousel-item .card {
+position: relative;
+width: 90%;
+}
+
+.carousel li {
+left: 50%;
+transform: translate(-50%, 300%);
+}
+
+#carousel-title {
+padding: 0;
+padding-bottom: 49px;
+padding-top: 5rem;
+color: #808080;
+}
+
+.carousel-control-prev {
+	left: -13%;
+}
+
+.carousel-control-next {
+	right: -13%;
 }
