--- a/css/gallery.css
+++ b/css/gallery.css
@@ -20,6 +20,7 @@
 .gallery__img-img {
     border-radius: 10px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    margin-bottom: 20px;
 }
 
 .gallery__img-overlay {
@@ -132,7 +133,7 @@
     top: 483px;
 }
 
-#gallery__img-overlay-4:hover
+#gallery__img-overlay-4:hover,
 #gallery__img-overlay-4:focus {
     height: 533px;
     -webkit-transform: translateY(-483px);
@@ -589,14 +590,14 @@
 }
 
 #gallery__img-overlay-27 {
-    top: 526px;
+    top: 499px;
 }
 
 #gallery__img-overlay-27:hover,
 #gallery__img-overlay-27:focus {
-    height: 576px;
-    -webkit-transform: translateY(-526px);
-	transform: translateY(-526px);
+    height: 549px;
+    -webkit-transform: translateY(-499px);
+	transform: translateY(-499px);
 }
 
 #gallery__img-overlay-27 small {
