--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,10 @@
     font-size: 24px;
 }
 
+.hero-carousel__wrapper .carousel-item img {
+    filter: opacity(80%) brightness(0.8);
+}
+
 .intro-paragraph {
     width: 30%;
     margin-left: 35%;
@@ -105,6 +109,12 @@
 
 .services__container .row {
     margin-top: 60px;
+}
+
+.services__button .bttn-float.bttn-lg {
+    margin-left: 0;
+    margin-top: 30px;
+    font-size: 16px;
 }
 
 .parallax__container {
@@ -222,6 +232,11 @@
     box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.8);
 }
 
+.gallery__container img {
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.8);
+}
+
 .ready-to-join__container {
     margin-bottom: 30px;
 }
@@ -230,14 +245,15 @@
     margin-top: 120px;
     text-align: center;
     color: var(--mainBlue);
+    font-size: 40px;
 }
 
 .ready-to-join__container p {
     margin-top: 60px;
-    margin-left: 30%;
+    margin-left: 12.5%;
     margin-bottom: 0;
     text-align: center;
-    width: 40%;
+    width: 75%;
 }
 
 .ready-to-join__button .bttn-float.bttn-lg {
