--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@
 
 .in-home-care__button .bttn-float.bttn-lg {
     margin-left: 0;
-    margin-top: 40px;
+    margin-top: 10px;
     font-size: 24px
 }
 
@@ -160,8 +160,26 @@
     margin-left: 15%;
 }
 
+.parallax__text .parallax__button .bttn-float.bttn-lg {
+    margin-left: 0;
+    margin-top: 40px;
+    font-size: 20px;
+    background-image: none;
+    background-color: rgba(0,0,0,0);
+    border: 2px solid var(--mainPurple);
+}
+
+.parallax__text .parallax__button .bttn-float.bttn-lg:hover {
+    background-image: linear-gradient(45deg, var(--mainBlue), var(--mainPurple));
+    border: none;
+}
+
 .why-choose__container {
     margin-top: 120px;
+}
+
+.why-choose__container a {
+    font-weight: bolder;
 }
 
 .why-choose__title {
