--- a/css/contact.css
+++ b/css/contact.css
@@ -3,10 +3,11 @@
 }
 
 .contact-intro-text {
-    width: 62%;
+    width: 65%;
     text-align: center;
-    font-size: 20px;
-    color: #808080;
+    font-size: 2rem;
+    color: #404040;
+    font-weight: 300;
 }
 
 .contact-intro-subtext {
