--- a/css/index.css
+++ b/css/index.css
@@ -387,6 +387,10 @@
 }
 
 @media only screen and (max-width: 500px) {
+    .hero-carousel__title h1 {
+        font-size: 1.5rem;
+    }
+    
     .hero-carousel__subtitle {
         position: absolute;
         left: -9999px;
@@ -400,7 +404,6 @@
 
 @media only screen and (max-width: 400px) {
     .hero-carousel__title h1 {
-        font-size: 1rem;
         top: -50px;
     }
 
