--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,7 @@ footer i {
 }
 
 .fa-bars {
-	color: var(--mainPurple);
+	color: white;
 }
 
 .font-medium {
@@ -465,5 +465,11 @@ footer i {
 	#testimonials-mobile {
 		display: block;
 		margin-top: 5%;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.navbar .navbar-brand {
+		font-size: 1rem;
 	}
 }
