--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -59,7 +59,8 @@
     text-align: center;
     font-weight: bolder;
     color: black;
-    font-size: 28px;
+    font-size: 1.75px;
+    font-weight: 300;
 }
 
 .card-main-text {
@@ -74,7 +75,10 @@
 
 #testimonials {
 	margin-top: 5%;
-	display: block;
+}
+
+.testimonial__container {
+    display: block;
 }
 
 .card-up {
@@ -110,6 +114,10 @@
 
 .rounded-circle {
 	border-radius: 50% !important;
+}
+
+.testimonial__container-mobile {
+    display: none;
 }
 
 .testimonial-hr {
@@ -155,6 +163,7 @@ padding: 0;
 padding-bottom: 49px;
 padding-top: 5rem;
 color: #808080;
+font-weight: 300;
 }
 
 .carousel-control-prev {
@@ -167,4 +176,117 @@ color: #808080;
 
 .card-text a{
     font-weight: bolder;
+}
+
+@media only screen and (max-width: 1400px) {
+    .our-story__card {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .aboutUs-mission-statement__header {
+		font-size: 1.75rem;
+    }
+    
+    .aboutUs-mission-statement-container p {
+        font-size: 1rem;
+    }
+
+    .our-story__card {
+        width: 75%; 
+    }
+
+    .our-story__card .card-title {
+        font-size: 1.75rem;
+    }
+
+    .our-story__card p {
+        font-size: 1rem;
+    }
+
+    .aboutUs-social__map-title {
+        font-size: 1.75rem;
+    }
+
+    p.aboutUs-social__description {
+        font-size: .75rem;
+    }
+
+    .aboutUs-social__quote-p {
+        font-size: 1.25rem;
+        width: 75%;
+    }
+
+    .aboutUs-social__fbook-description {
+        font-size: 1.75rem;
+    }
+
+    .testimonial__container{
+        display: none;
+    }
+
+    .testimonial__container-mobile {
+        display: block;
+    }
+
+    .testimonial__container-mobile .carousel-item .card {
+        width: 60%;
+    }
+
+    .testimonial__container-mobile .card-body h4 {
+        text-align: center;
+    }
+
+    .testimonial__container-mobile .carousel-control-prev {
+        color: var(--mainPurple);
+        left: 5%;
+        top: 15px;
+    }
+    
+    .testimonial__container-mobile .carousel-control-next {
+        color: var(--mainPurple);
+        right: 5%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #aboutUsImg {
+        background-image:url('img/hero-cat-768px.jpg');
+    }
+    
+    .map {
+        position: relative;
+        top: 45px;
+    }
+
+    .quote-1 {
+        position: relative;
+        top: -760px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .our-story__card {
+        width: 90%;
+    }
+
+    p.aboutUs-social__description {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .aboutUs-social__quote-p {
+        width: 90%;
+    }
+
+    .testimonial__container-mobile .carousel-item .card {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .our-story__card {
+        width: 100%;
+    }
 }
