--- a/css/servicesandrates.css
+++ b/css/servicesandrates.css
@@ -37,6 +37,10 @@
     margin-top: 120px;
 }
 
+.services__container img {
+    max-width: 50vw;
+}
+
 .services-card__text-title {
     color: #202020;
     font-family: 'Signika', sans-serif;
@@ -83,4 +87,121 @@ services-card__text-lead-p a {
 
 .three-level-rate {
     border-bottom: 2px solid #808080;
+}
+
+.pet-sitting-mobile {
+    display: none;
+}
+
+@media only screen and (max-width: 1200px) {
+    .card-title.intro-title {
+        font-size: 1.75rem;
+        text-align: center;
+    }
+
+    .titleCardTitleBackground {
+        min-width: 200px;
+    }
+
+    .intro-text__subtitle-p {
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .intro-text__quote-p {
+        font-size: 1.75rem;
+    }
+
+    .services-row-1 .services-card-rates {
+        margin-top: -189px;
+        margin-right: 72%;
+        margin-bottom: 40px;
+        margin-left: -140%;
+    }
+
+    .services-row-2 .services-card-rates {
+        margin-top: -145px;
+        margin-right: -140%;
+        margin-bottom: 40px;
+        margin-left: 77%;
+    }
+
+    .services-row-3 .services-card-rates {
+        margin-top: 75px;
+        margin-right: 75%;
+        margin-bottom: 40px;
+        margin-left: -145%;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .services-row-1 .services-card-rates {
+        margin-top: -300px;
+    }
+
+    .services-row-2 .services-card-rates {
+        margin-top: -215px;
+    }
+
+    .services-row-3 .services-card-rates {
+        margin-top: 0;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .intro-text__quote-p {
+        font-size: 1.25rem;
+    }
+
+    .intro-text__quote-p .accent {
+        font-size: 1rem;
+    }
+
+    .intro-text__subtitle-p {
+        font-size: 1rem;
+    }
+
+    .services__container img {
+        max-width: 100vw;
+    }
+
+    .services__container .row {
+        margin-top: 30px;
+    }
+
+    .services-card__text-title {
+        font-size: 1.5rem;
+    }
+
+    .services-card__text p {
+        font-size: 1rem;
+        text-align: left;
+        padding-left: 10px;
+    }
+
+    .pet-sitting-xl {
+        display: none;
+    }
+
+    .pet-sitting-mobile {
+        display: block;
+    }
+
+    .services-row-1 .services-card-rates {
+        margin: 0 0 30px 0;
+    }
+
+    .services-row-3 .services-card-rates {
+        margin: 0 0 30px 0;
+    }
+
+    .services-card__rate {
+        margin-left: 0;
+        width: 100%;
+    }
+
+    .services-card__rate-last .accent {
+        margin-left: 0;
+    }
 }
