--- a/css/contact.css
+++ b/css/contact.css
@@ -18,6 +18,10 @@
     font-family: "Signika", sans-serif;
 }
 
+.message-us-br {
+    display: none;
+}
+
 .get-in-touch__container {
     margin-top: 160px;
 }
@@ -42,7 +46,7 @@
 
 .get-in-touch__contact-info {
     margin-top: 60px;
-    margin-left: 385px;
+    margin-left: 20vw;
 }
 
 .get-in-touch__facebook {
@@ -78,4 +82,79 @@
     margin-left: 0;
     margin-top: 0;
     font-size: 16px;
+}
+
+.col-md {
+    max-width: 50vw;
+}
+
+@media only screen and (max-width: 1275px) {
+    .titleCardTitleBackground {
+        width: 255px;
+    }
+}
+
+@media only screen and (max-width: 1027px) {
+    .contact-intro-text {
+        font-size: 1.5rem;
+    }
+
+    .contact-intro-subtext {
+        width: 40%;
+    }
+
+    .get-in-touch__contact-info {
+        margin-left: 15vw;
+    }
+
+    .get-in-touch__form {
+        width: 75%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .contact-intro-subtext {
+        width: 70%;
+        font-size: 1rem;
+    }
+
+    .get-in-touch__container {
+        margin-top: 40px;
+    }
+
+    .message-us-br {
+        display: block;
+    }
+    .get-in-touch__message-us-subtitle {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .col-md {
+        max-width: 100vw;
+    }
+
+    .get-in-touch__contact-info {
+        margin-left: 35vw;
+    }
+
+    .get-in-touch__get-in-touch {
+        margin-top: 60px;
+    }
+
+    .get-in-touch__contact-info {
+        margin-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .contact-intro-text {
+        font-size: 1.25rem;
+    }
+
+    .get-in-touch__contact-info {
+        margin-left: 25vw;
+    }
+
+
 }
